syntax="proto3";

package genproto;
option go_package="genproto/user_service";

import "researcher.proto";
import "google/protobuf/empty.proto";

service ResearcherService {
    rpc Create(Researcher) returns (ResearcherId) {}
    rpc Update(Researcher) returns (ResearcherId) {}
    rpc Get(ResearcherId) returns (Researcher) {}
    rpc GetAll(GetAllResearcherRequest) returns (GetAllResearcherResponse) {}
    rpc Delete(ResearcherId) returns (google.protobuf.Empty) {}
    rpc UpdatePhoto(UpdateResearcherPhoto) returns (google.protobuf.Empty) {}
}

message GetAllResearcherRequest {
    int64 offset = 1;
    int64 limit = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
    string company_id = 6;
}